Refactoring : Manage setValue and addSuper with a FunctionalInterface