@@ -11,41 +11,31 @@ import org.genericsystem.kernel.UpdateRestructurator;
 
 public interface UpdatableService<T extends UpdatableService<T>> extends BindingService<T> {
 
+	@SuppressWarnings("unchecked")
 	default T setValue(Serializable value) {
-		@SuppressWarnings("unchecked")
-		T old = (T) this;
-		return new UpdateRestructurator<T>() {
-			private static final long serialVersionUID = -2459793038860672894L;
-
-			@Override
-			protected T rebuild() {
-				T meta = getMeta();
-				return buildInstance().init(meta.getLevel() + 1, meta, getSupersStream().collect(Collectors.toList()), value, getComponents()).plug();
-			}
-		}.rebuildAll(old, false);
+		T meta = getMeta();
+		UpdateRestructurator<T> ur = () -> buildInstance().init(meta.getLevel() + 1, meta, getSupersStream().collect(Collectors.toList()), value, getComponents()).plug();
+		return ur.rebuildAll((T) this, false);
 	}
 
+	@SuppressWarnings("unchecked")
 	default T addSuper(T superToAdd) {
-		@SuppressWarnings("unchecked")
 		T old = (T) this;
-		return new UpdateRestructurator<T>() {
-			private static final long serialVersionUID = -1555148508066608603L;
-
-			@Override
-			protected T rebuild() {
-				OrderedSupers<T> orderedSupers = new OrderedSupers<T>((Stream<T>) old.getSupersStream());
-				orderedSupers.add(superToAdd);
-				return old.getMeta().buildInstance(orderedSupers.toList(), old.getValue(), old.getComponentsStream().collect(Collectors.toList())).plug();
-			}
-		}.rebuildAll(old, true);
+		UpdateRestructurator<T> ur = () -> old.getMeta().buildInstance(new OrderedSupers<T>((Stream<T>) old.getSupersStream(), superToAdd).toList(), old.getValue(), old.getComponentsStream().collect(Collectors.toList())).plug();
+		return ur.rebuildAll(old, true);
 	}
 
 	public static class OrderedSupers<T extends UpdatableService<T>> extends LinkedHashSet<T> {
-		private static final long serialVersionUID = -4140245232320054044L;
+		private static final long serialVersionUID = 6163099887384346235L;
 
 		public OrderedSupers(Stream<T> adds) {
 			for (T add : adds.collect(Collectors.toList()))
 				add(add);
+		}
+
+		public OrderedSupers(Stream<T> adds, T lastAdd) {
+			this(adds);
+			add(lastAdd);
 		}
 
 		@Override
